--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -6,6 +6,7 @@
     <body>
         <div id="root"></div>
 
-        <script src="built/bundle.js"></script>
+        <!-- TODO: Fix this -->
+        <script src="http://localhost:5000/built/bundle.js"></script>
     </body>
 </html>
