--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,12 +1,12 @@
-<html>
+<html style="height: 100%;">
     <head>
         <link href="https://fonts.googleapis.com/css?family=Ubuntu&display=swap" rel="stylesheet">
         <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
       rel="stylesheet">
     </head>
 
-    <body style="margin: 0px">
-        <div id="root"></div>
+    <body style="margin: 0px; min-height: 100%; position: absolute;">
+        <div id="root" style="height: 100%;"></div>
 
         <!-- TODO: Fix this -->
         <script src="http://localhost:5000/built/bundle.js"></script>
