--- a/src/main/js/components/App/App.css
+++ b/src/main/js/components/App/App.css
@@ -3,4 +3,5 @@ body {
   padding: 0;
   font-family: 'Ubuntu', sans-serif;
   background-attachment: fixed !important;
+  background-position: center !important;
 }
