--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -5,7 +5,7 @@
       rel="stylesheet">
 
       <style>
-            * { background-color: rgba(255,0,0,.2); }
+            /* * { background-color: rgba(255,0,0,.2); }
             * * { background-color: rgba(0,255,0,.2); }
             * * * { background-color: rgba(0,0,255,.2); }
             * * * * { background-color: rgba(255,0,255,.2); }
@@ -13,7 +13,7 @@
             * * * * * * { background-color: rgba(255,255,0,.2); }
             * * * * * * * { background-color: rgba(255,0,0,.2); }
             * * * * * * * * { background-color: rgba(0,255,0,.2); }
-            * * * * * * * * * { background-color: rgba(0,0,255,.2); }
+            * * * * * * * * * { background-color: rgba(0,0,255,.2); } */
       </style>
     </head>
 
