--- a/src/main/js/components/sharedComponents/TopBar/TopBar.css
+++ b/src/main/js/components/sharedComponents/TopBar/TopBar.css
@@ -1,23 +1,108 @@
 .TopBar {
     box-shadow: 0px 4px 4px 0px #aaa;
+    width: 100vw;
+    background: #000;
+    color: #fff;
+    display: flex;
+    flex-direction: row;
+    position: absolute;
+    z-index: 2;
+    font-size: 1.8em;
+    font-family: 'ZCOOL QingKe HuangYou', cursive;
+    text-align: center;
+    align-items: center;
+    height: 62px;
 }
 
-.LogoContainer {
-    border: 1px solid white;
+.TopBar--hide {
+    animation-timing-function: ease-in;
+    animation-name: hideTopBar;
+    animation-duration: 0.3s;
+    animation-fill-mode: forwards;
+    position: fixed;
 }
 
-.RightButtonsContainer {
-    border: 1px solid white;
+.TopBar--show {
+    animation-timing-function: ease-in;
+    animation-name: showTopBar;
+    animation-duration: 0.3s;
+    animation-fill-mode: forwards;
+    position: fixed;
 }
 
-.ThemeDropDownContainer {
-    border: 1px solid white;
+@keyframes hideTopBar {
+    from {
+        transform: translateY(0%);
+        opacity: 1;
+    }
+    99% {
+        transform: translateY(-100%);
+        opacity: 0.4;
+    }
+    100% {
+        opacity: 0;
+    }
 }
 
-.MyLink {
-    color: #000;
+@keyframes showTopBar {
+    from {
+        transform: translateY(-100%);
+        opacity: 0.4;
+    }
+    to {
+        transform: translateY(0%);
+        opacity: 1;
+    }
+}
+
+.TopBar .LogoContainer {
+    margin: 17px 0px;
+    flex-grow: 1;
+    width: 0px;
+}
+
+.TopBar .LeftPaneContainer {
+    flex-grow: 1;
+    width: 0px;
+}
+
+.TopBar .RightPaneContainer {
+    flex-grow: 1;
+    width: 0px;
+}
+
+a {
     text-decoration: none;
+    color: #fff;
+    margin: auto;
 }
+
+.RightPaneButton {
+    display: inline-flex;
+    height: 30px;
+    width: 30px;
+    border-radius: 1000px;
+    margin-right: 10px;
+    background: #454545;
+    box-shadow: inset 0px 0px 0px 20px #000;
+    transition: all 0.5s;
+    cursor: pointer;
+}
+
+.RightPaneButton:hover {
+    box-shadow: inset 0px 0px 0px 0px #000;
+    
+}
+
+.RotateButton:hover {
+    transform: rotate(90deg);    
+}
+
+.RightPaneButton img {
+    filter: invert(100%) sepia(100%) saturate(1%) hue-rotate(78deg) brightness(102%) contrast(102%);
+    height: 20px;
+}
+
 
 .MyMaterialIcon {
     font-family: 'Material Icons';
