Added more themes

--- a/src/main/js/components/App/App.css
+++ b/src/main/js/components/App/App.css
@@ -4,4 +4,5 @@ body {
   font-family: 'Ubuntu', sans-serif;
   background-attachment: fixed !important;
   background-position: center !important;
+  transition: all 1s;
 }
