--- a/src/main/js/components/sharedComponents/TopBar/TopBar.css
+++ b/src/main/js/components/sharedComponents/TopBar/TopBar.css
@@ -1,5 +1,5 @@
 .TopBar {
-    box-shadow: 0px 4px 4px 0px #aaa;
+    box-shadow: 0px 4px 4px 0px var(--box-shadow-color);
     width: 100vw;
     background: #000;
     color: #fff;
