WIP: Integrating Material UI into the app and working on create post

--- a/src/main/js/components/App/App.css
+++ b/src/main/js/components/App/App.css
@@ -6,3 +6,13 @@ body {
   background-position: center !important;
   transition: all 1s;
 }
+
+.fade-enter {
+  opacity: 0;
+  z-index: 1;
+}
+
+.fade-enter.fade-enter-active {
+  opacity: 1;
+  transition: opacity 250ms ease-in;
+}
