--- a/src/main/js/components/pages/createPost/CreatePost.css
+++ b/src/main/js/components/pages/createPost/CreatePost.css
@@ -1,7 +1,16 @@
 .UploadDialog {
     position: absolute;
     margin-top: 100px;
-    border: 2px solid black;
-    width: 80vw;
+    width: 40%;
+    margin-left: 30%;
+    box-shadow: 0px 10px 14px 6px rgba(50, 50, 50, 0.8);
+    transition: all 0.3s;
 }
 
+.UploadDialog h1 {
+    font-family: 'Ubuntu', sans-serif;
+    color: #fff;
+    text-decoration: none;
+    font-size: 24;
+    padding-left: 20px;
+}
