WIP: Google sign in API integration, minor changes

--- a/src/main/js/components/sharedComponents/SignUpBlock/SignUpBlock.css
+++ b/src/main/js/components/sharedComponents/SignUpBlock/SignUpBlock.css
@@ -1,6 +1,6 @@
 .SignUpBlock {
     height: 100%;
-    background-color: green;
     position: absolute;
     width: 100%;
+    background-color: #000;
 }
