--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -3,6 +3,10 @@
         <link href="https://fonts.googleapis.com/css?family=Ubuntu|ZCOOL+QingKe+HuangYou&display=swap" rel="stylesheet">
         <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 
+
+        <script src="https://apis.google.com/js/platform.js" async defer></script>
+        <meta name="google-signin-client_id" content="156732240229-5dr179koaj2l5uvd2oet8e04h9ir971j.apps.googleusercontent.com"></meta>
+
       <style>
             /* * { background-color: rgba(255,0,0,.2); }
             * * { background-color: rgba(0,255,0,.2); }
