--- a/src/main/js/components/sharedComponents/LoginBlock/LoginBlock.css
+++ b/src/main/js/components/sharedComponents/LoginBlock/LoginBlock.css
@@ -1,7 +1,43 @@
 .LoginBlock {
     height: 100%;
-    background-color: red;
+    background-color: #000;
+    /* background-color: red; */
     position: absolute;
     width: 100%;
     right: 0px;
+}
+
+.google-sign-in {
+    display: inline-block;
+    border: 1px solid white;
+    background: url('https://www.stickpng.com/assets/images/5847f9cbcef1014c0b5e48c8.png');
+    background-size: cover;
+    height: 20px;
+    width: 20px;
+}
+
+.GoogleSignInButtonsContainerDisabled {
+    opacity: 0.3;
+
+}
+
+.GoogleSignInButtonsContainerEnabled {
+    cursor: pointer;
+    transition: all 0.2s;
+}
+
+.GoogleSignInButtonsContainer {
+    display: inline-block;
+    border-radius: 1000px;
+    padding: 10px;
+    background-color: #FFF;
+}
+
+.GoogleSignInButtonsContainerEnabled:hover {
+    box-shadow: #aaaaaa73 0px 5px 10px 0px;
+    transform: translateY(-2px) scale(1.03);
+}
+
+.SignInButtonsContainer {
+    text-align: center;
 }
