--- a/src/main/js/components/sharedComponents/LoginBlock/LoginBlock.css
+++ b/src/main/js/components/sharedComponents/LoginBlock/LoginBlock.css
@@ -1,7 +1,7 @@
 .LoginBlock {
     height: 100%;
     background-color: #000;
-    /* background-color: red; */
+    background-color: orangered;
     position: absolute;
     width: 100%;
     right: 0px;
