--- a/src/main/js/components/pages/createPost/CreatePost.css
+++ b/src/main/js/components/pages/createPost/CreatePost.css
@@ -4,7 +4,30 @@
     width: 30%;
     margin-left: 35%;
     box-shadow: 0px 10px 14px 6px rgba(50, 50, 50, 0.8);
-    transition: all 0.3s;
+    /* transition: all 0.3s; */
+}
+
+.UploadDialog .PreviewImage {
+    /* transition: all 1s cubic-bezier(.14,.85,.53,1.3); */
+    top: 50%;
+    left: 50%;
+    /* transform: translate(-50%, -50%); */
+}
+
+.UploadDialog .PreviewImageContainer {
+    height: 100%;
+    width: 100%;
+    position: relative;
+    display: flex;
+}
+
+.UploadDialog .PreviewImage--hidden {
+    height: 0px;
+    width: 0px;
+}
+
+.UploadDialog .PreviewImage--show {
+    width: 100%;
 }
 
 .UploadDialog h1 {
@@ -23,11 +46,11 @@
     color: #999;
 }
 
-.UploadDialog .DropzoneArea-dropzoneParagraph-69 {
+.UploadDialog div[class*="DropzoneArea-dropZone-"] {
     font-size: 20px;
 }
 
-.DropzoneArea-dropzoneTextStyle-67 {
+div[class*="DropzoneArea-dropzoneTextStyle-"] {
     margin: auto;
     transform: translateY(-10px);
 }
@@ -36,8 +59,9 @@
     display: none;
 }
 
-.DropzoneArea-dropZone-64 {
+div[class*="DropzoneArea-dropZone-"] {
     background: transparent !important;
+    border: 3px dashed #C8C8C8 !important;
     margin: 5%;
     color: white;
     width: 90% !important;
@@ -46,7 +70,7 @@
     height: 40vh;
 }
 
-.DropzoneArea-uploadIconSize-68 {
+svg[class*="DropzoneArea-uploadIconSize"] {
     color: white !important;
     margin-top: -20px;
 }
