--- a/src/main/js/components/sharedComponents/ShadowButton/ShadowButton.css
+++ b/src/main/js/components/sharedComponents/ShadowButton/ShadowButton.css
@@ -4,4 +4,13 @@
     color: #fff;
     transition: all 0.4s;
     cursor: pointer;
+    position: relative;
+}
+
+.ShadowButton img {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    height: 20px;
+    transform: translate(-50%, -50%);
 }
