1. Complete create post 2. Added vote container properly

--- a/src/main/js/components/pages/front/VoteContainer.css
+++ b/src/main/js/components/pages/front/VoteContainer.css
@@ -1,9 +1,17 @@
 .VoteContainer {
+    display: flex;
+    flex-direction: row;
+    padding: 5px;
     font-family: 'Ubuntu', sans-serif;
     text-align: center;
 }
 
 .VoteContainer i {
-    width: 100%;
+    font-size: 3em;
+    color: white;
+    text-shadow: 2px 2px 2p rgba(0, 0, 0, 0.5);
     cursor: pointer;
+    background: rgba(255, 255, 255, 0.1);
+    transition: all 0.35s;
+    border-radius: 200px;
 }
