--- a/src/main/js/components/App/App.css
+++ b/src/main/js/components/App/App.css
@@ -5,6 +5,7 @@ body {
   background-attachment: fixed !important;
   background-position: center !important;
   transition: background-image 1s, background-color 1s;
+  overflow-x: hidden;
 }
 
 .fade-enter {
