--- a/src/main/js/components/sharedComponents/SignUpBlock/SignUpBlock.css
+++ b/src/main/js/components/sharedComponents/SignUpBlock/SignUpBlock.css
@@ -2,5 +2,41 @@
     height: 100%;
     position: absolute;
     width: 100%;
-    background-color: orange;
+    background-color: #333;
+    border-radius: 0px 0px 8px 8px;
+}
+
+.SignUpBlock .MuiFilledInput-underline:after {
+    border-bottom: 2px solid white !important;
+}
+
+.SignUpBlock .MuiAlert-root {
+    /* position: fixed !important;
+    top: 85vh !important;
+    width: 400px !important; */
+}
+
+.SignUpBlock .MuiButton-root {
+    color: #fff !important;
+    border: 1px solid #fff !important;
+    margin: 14px auto !important;
+    display: block !important;
+}
+
+.SignUpBlock .MuiButton-root.Mui-disabled {
+    opacity: 0.3;
+}
+
+.SignUpBlock .MuiFilledInput-root {
+    height: 40px !important;
+    margin-top: 20px;
+}
+
+.SignUpBlock .errorMessage {
+    color: #cc1111;
+    font-size: 0.4em;
+    font-family: Arial, Helvetica, sans-serif;
+    position: absolute;
+    width: 100%;
+    margin-top: 2px;
 }
