--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -24,6 +24,7 @@
         <div id="root"></div>
 
         <!-- TODO: Fix this -->
-        <script src="http://localhost:5000/built/bundle.js"></script>
+        <script src="http://3.20.255.26:5000/built/bundle.js"></script>
+        <!-- <script src="http://localhost:5000/built/bundle.js"></script> -->
     </body>
 </html>
