Configured automated deployment

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -23,8 +23,7 @@
     <body style="margin: 0px; min-height: 100%;">
         <div id="root"></div>
 
-        <!-- TODO: Fix this -->
-        <!-- <script src="http://3.20.255.26:5000/built/bundle.js"></script> -->
-        <script src="http://localhost:5000/built/bundle.js"></script>
+        <script src="https://10gag-frontend.s3.ap-south-1.amazonaws.com/bundle.js"></script>
+        <!-- <script src="http://localhost:5000/built/bundle.js"></script> -->
     </body>
 </html>
