--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,5 +1,8 @@
 <html style="height: 100%;">
     <head>
+        <title>10Gag</title>
+        <link rel="icon" href="https://static-res-mine.s3.ap-south-1.amazonaws.com/10gag-icon/res/mipmap-mdpi/icon.png" />
+
         <link href="https://fonts.googleapis.com/css?family=Ubuntu|ZCOOL+QingKe+HuangYou&display=swap" rel="stylesheet">
         <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 
@@ -23,7 +26,7 @@
     <body style="margin: 0px; min-height: 100%;">
         <div id="root"></div>
 
-        <script src="https://10gag-frontend.s3.ap-south-1.amazonaws.com/bundle.js"></script>
-        <!-- <script src="http://localhost:5000/built/bundle.js"></script> -->
+        <!-- <script src="https://10gag-frontend.s3.ap-south-1.amazonaws.com/bundle.js"></script> -->
+        <script src="http://localhost:5000/built/bundle.js"></script>
     </body>
 </html>
